fix: discoverMore button small in mobile

--- a/src/scss/pages/home.scss
+++ b/src/scss/pages/home.scss
@@ -288,6 +288,9 @@
     }
     .MuiButton-root {
       padding: 13px 31px;
+      @include media($sm) {
+        @include padding-vertical(10);
+      }
     }
   }
 }
